fix mobile styling on buzzwords
Prev, buzzowords over wrap with stars b/c too much side margin on column

--- a/src/Components/About/index.css
+++ b/src/Components/About/index.css
@@ -57,6 +57,12 @@
   margin: 0 2em;
 }
 
+@media only screen and (max-width: 460px) {
+  #Buzzwords .column {
+    margin: 0;
+  }
+}
+
 #Buzzwords .column .text {
   width: 13em;
   margin: 0.5em 0;
